// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <CrossButton /> With title should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    iconName="home"
    mode="contained"
    onPress={[Function]}
    style={
      Object {
        "height": 45,
        "marginBottom": 10,
        "marginRight": 10,
        "marginTop": 10,
      }
    }
    title="home"
  >
    home
  </View>
</View>
`;

exports[`components <CrossButton /> Without title should renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    iconName="map"
    name="map"
    onPress={[Function]}
    reverse={true}
    title={null}
    type="font-awesome"
  />
</View>
`;
